--- a/style/style.css
+++ b/style/style.css
@@ -28,89 +28,20 @@ body {
     display: flex;
     justify-content: space-around;
     background-color: var(--cor-primaria);
-    border-radius: 20px 20px 0 0;
+    border-radius: 1.25rem 1.25rem 0 0;
 }
 
 .cabecalho__link {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
 }
 
 .cabecalho__link__links {
     text-decoration: none;
     color: var(--cor-terciaria);
-    font-size: 20px;
+    font-size: 1.25rem;
 }
-
-.cabecalho__imagens {
-    max-height: 80px;
-    height: auto;
-    width: auto;
-}
-
-.meio__logo {
-    background-color: var(--cor-secundaria);
-    padding: 5% 0;
-    text-align: center;
-    font-size: 20px;
-}
-
-.meio__apresentacao {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5% 10%;
-}
-
-.meio__apresentacao__texto {
-    padding: 1% 10% 1% 0;
-    font-size: 24px;
-    text-align: justify;
-}
-
-.rodape {
-    background-color: var(--cor-primaria);
-    color: var(--cor-terciaria);
-    text-align: center;
-    padding: 2% 0;
-    border-radius: 0px 0px 20px 20px;
-}
-
-#botao {
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: var(--cor-secundaria);
-    color: #f0f0f0;
-    cursor: pointer;
-    padding: 1.1%;
-    border-radius: 15%;
-    font-size: 18px;
-}
-  
-#botao:hover {
-    background-color: #302e2e;
-}
-
-/* about css */
-
-.meio__sobre {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 15.45% 10%;
-}
-
-.meio__sobre__texto {
-    font-size: 24px;
-    text-align: center;
-}
-
-/* products css */
 
 .dropdown {
     position: relative;
@@ -121,13 +52,13 @@ body {
     display: none;
     position: absolute;
     background-color: var(--cor-secundaria);
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5 1rem 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 .dropdown__content a {
     color: var(--cor-terciaria);
-    padding: 12px 16px;
+    padding: 0.75rem 1rem;
     text-decoration: none;
     display: block;
 }
@@ -145,6 +76,124 @@ body {
     background-color: #3E8E41;
 }
 
+.cabecalho__imagens {
+    max-height: 5rem;
+    height: auto;
+    width: auto;
+}
+
+.meio__logo {
+    background-color: var(--cor-secundaria);
+    padding: 5% 0;
+    text-align: center;
+    font-size: 1.25rem;
+}
+
+.meio__apresentacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5% 10%;
+}
+
+.meio__apresentacao__texto {
+    padding: 1% 10% 1% 0;
+    font-size: 1.5rem;
+    text-align: justify;
+}
+
+.rodape {
+    background-color: var(--cor-primaria);
+    color: var(--cor-terciaria);
+    text-align: center;
+    padding: 2% 0;
+    border-radius: 0 0 1.25rem 1.25rem;
+}
+
+@media (max-width:600px) {
+
+    .cabecalho {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .cabecalho__link__links{
+        font-size: 1rem;
+    }
+
+    .dropdown:hover .dropdown__content {
+        display: hidden;
+    }
+
+    .cabecalho__imagens {
+        max-width: 3rem;
+        width: auto;
+        height: auto;
+        padding: 1rem 0 0 0;
+    }
+
+    .meio__logo {
+        font-size: 1rem;
+    }
+
+    .meio__apresentacao {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .meio__apresentacao__texto {
+        font-size: 1rem;
+        padding: 1% 0 10% 0;
+    }
+
+    .meio__apresentacao__imagem {
+        max-width: 15rem;
+        width: auto;
+        height: auto;
+    }
+
+    .rodape {
+        font-size: 0.7rem;
+    }
+
+    #rodape__index {
+        margin-top: 20%;
+    }
+}
+
+/* about css */
+
+.meio__sobre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15.45% 10%;
+}
+
+.meio__sobre__texto {
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+@media (max-width:600px) {
+
+    .meio__sobre {
+        padding: 15% 5% 5% 5%;
+    }
+
+    .meio__sobre__texto {
+        font-size: 1rem;
+        text-align: justify;
+    }
+
+    #rodape__about {
+        margin-top: 100%;
+    }
+}
+
+/* products css */
+
 .meio__produtos {
     display: flex;
     align-items: center;
@@ -156,7 +205,7 @@ body {
 .meio__produtos__texto {
     text-align: center;
     padding: 5% 0 2% 0;
-    font-size: 36px;
+    font-size: 2.25rem;
 }
 
 .meio__produtos__categorias {
@@ -174,9 +223,50 @@ body {
 .meio__produtos__imagens {
     padding: 3%;
     text-align: center;
-    border: 2px solid var(--cor-secundaria);
+    border: 0.125rem solid var(--cor-secundaria);
     border-radius: 25%;
     margin: 2%;
+}
+
+#botao {
+    position: fixed;
+    bottom: 1.25rem;
+    right: 1.875rem;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: var(--cor-secundaria);
+    color: #f0f0f0;
+    cursor: pointer;
+    padding: 1.1%;
+    border-radius: 15%;
+    font-size: 1.125rem;
+}
+  
+#botao:hover {
+    background-color: #302e2e;
+}
+
+@media (max-width:600px) { 
+
+    .meio__produtos__categorias {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .meio__produtos__texto {
+        font-size: 2rem;
+    }
+
+    figure img {
+        max-width: 5rem;
+    }
+
+    figure figcaption {
+        font-size: 0.7rem;
+        padding: 0 1% 0 1%;
+    }
+
 }
 
 /* contact css */
@@ -192,7 +282,7 @@ body {
 }
 
 .meio__contato__texto__1 {
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: bolder;
     font-style: italic;
     padding: 0% 0 2% 0;
@@ -214,8 +304,26 @@ body {
 }
 
 .meio__contato__imagens {
-    max-width: 50px;
+    max-width: 3.125rem;
     width: auto;
     height: auto;
     padding: 0.5% 0 0 0;
+}
+
+@media (max-width:600px) {
+    .meio__contato {
+        padding: 20% 0 0 0;
+    }
+
+    #rodape__contact {
+        margin-top: 50%;
+    }
+
+    .meio__contato__texto__1 {
+        padding: 0 0 10% 0;
+    }
+
+    .meio__contato__texto__4 {
+        padding: 10% 0 0 0;
+    }
 }
